layout changed for interactive google map

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -15,7 +15,7 @@
     <script src="../../header/headerHTML.js"></script>
 
     <div class="about-container">
-        <div class="box" id="team">
+        <div class="card" id="team">
             <h2>The Team</h2>
             <div class="team-member">
                 <p>Kieran Chafin dymi-dev</p>
@@ -45,7 +45,7 @@
                 <p>Tobin Nickels tobinnickels</p>
             </div>
         </div>
-        <div class="box" id="info">
+        <div class="card" id="info">
             <h2>Why?</h2>
             <div class="summary">
                 <p>As many of us are locals to Tucson, we want to express our love for the hidden gems that it has to offer.
