--- a/src/html/bisonwitches.html
+++ b/src/html/bisonwitches.html
@@ -65,6 +65,58 @@
                 </div>
             </div>
         </div>
+        
+        <div class="card">
+            <div id="googleMap"></div>
+
+            <script>
+
+            function myMap() {
+                var mapProp= {
+                center:new google.maps.LatLng(32.225851, -110.965430),
+                zoom:16,
+                };
+                var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+                var marker = new google.maps.Marker({
+                position:{lat:32.225851,lng:-110.965430},
+                map:map
+                });
+            }
+            </script>
+
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAqfA4GOBrmwVUx2gDtmN2DXNkPLWWDcw&callback=myMap"></script>
+        </div>
+
+        <div class="container2">
+            <div class="card">
+                <img class="img" src="../imgs/bisonwitches_imgs/bbq_pork_nachos.jpeg" alt="">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"Such an Awesome place great atmosphere and dog friendly. You definitely wont leave hungry portions are huge and such a variety of things to try."</p>
+                    <p class="person">- Marc Paul</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="img" src="../imgs/bisonwitches_imgs/mcquinton.jpeg" alt="">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"There are no real bison, witches, or broomsticks in this deli; however, we agreed that there is still magic within this restaurant. Now… maybe not literally… but it is safe to say that we have not had deli food this good in a while. Of course, if you don’t believe us, you’re welcome to experience the magic yourselves…"</p>
+                    <p class="person">- Takes on Tucson</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="img" src="../imgs/bisonwitches_imgs/french_dip.jpeg" alt="">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"This place has awesome food!   The sandwiches are delicious.  The fried peanut butter and jelly sandwich is delicious as well as the veggie sandwich. Has a small bar. You will not be disappointed when you visit!"</p>
+                    <p class="person">- Diana Treichel</p>
+                </div>
+            </div>
+        </div>
 
         <div class="card">
             <div class="video">
@@ -73,36 +125,6 @@
                     src="https://www.youtube.com/embed/CtRMqLobPHA?si=45KxFmDIP40Ac0Dg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
-            </div>
-        </div>
-    </div>
-
-    <div class="container2">
-        <div class="card">
-            <img class="img" src="../imgs/bisonwitches_imgs/bbq_pork_nachos.jpeg" alt="">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"Such an Awesome place great atmosphere and dog friendly. You definitely wont leave hungry portions are huge and such a variety of things to try."</p>
-                <p class="person">- Marc Paul</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="img" src="../imgs/bisonwitches_imgs/mcquinton.jpeg" alt="">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"There are no real bison, witches, or broomsticks in this deli; however, we agreed that there is still magic within this restaurant. Now… maybe not literally… but it is safe to say that we have not had deli food this good in a while. Of course, if you don’t believe us, you’re welcome to experience the magic yourselves…"</p>
-                <p class="person">- Takes on Tucson</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="img" src="../imgs/bisonwitches_imgs/french_dip.jpeg" alt="">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"This place has awesome food!   The sandwiches are delicious.  The fried peanut butter and jelly sandwich is delicious as well as the veggie sandwich. Has a small bar. You will not be disappointed when you visit!"</p>
-                <p class="person">- Diana Treichel</p>
             </div>
         </div>
     </div>
