--- a/src/html/barrio.html
+++ b/src/html/barrio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../javascript/barrio_map.js" defer></script> 
     <title>Barrio Brewing Co.</title>
 </head>
 
@@ -67,6 +68,58 @@
         </div>
 
         <div class="card">
+            <div id="googleMap"></div>
+
+            <script>
+
+            function myMap() {
+                var mapProp= {
+                center:new google.maps.LatLng(32.214501, -110.959504),
+                zoom:16,
+                };
+                var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+                var marker = new google.maps.Marker({
+                position:{lat:32.214501,lng:-110.959504},
+                map:map
+                });
+            }
+            </script>
+
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAqfA4GOBrmwVUx2gDtmN2DXNkPLWWDcw&callback=myMap"></script>
+        </div>
+        
+        <div class="container2">
+            <div class="card">
+                <img class="img" src="..\imgs\barrio_imgs\barrio_outside.jpg" alt="An image of what barrio brewing company looks like on the outside">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"Barrio Brewing Co. is a gem in Tucson. Their craft beers are top-notch, and the atmosphere is always lively. A must-visit for any beer enthusiast!"</p>
+                    <p class="person">- John Smith</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="img" src="..\imgs\barrio_imgs\barrio_bar.jpg" alt="An image of what the bar looks like at barrio brewing company">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"I love Barrio Brewing Co.! Their pizzas are delicious, and they pair perfectly with their selection of beers. Great place to hang out with friends!"</p>
+                    <p class="person">- Emily Johnson</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="img" src="..\imgs\barrio_imgs\barrio_dining.jpg" alt="An image of what the dining room looks like at barrio brewing company">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"The ambiance at Barrio Brewing Co. is fantastic. Whether you're indoors or out on the patio, it's always a great experience. Plus, their staff is friendly and knowledgeable about their beers!"</p>
+                    <p class="person">- Michael Rodriguez</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
             <div class="video">
                 <p>Learn how Barrio Brewing Co expanded to making food</p>
                 <iframe width="560" height="315" 
@@ -75,36 +128,7 @@
                 </iframe>
             </div>
         </div>
-    </div>
 
-    <div class="container2">
-        <div class="card">
-            <img class="img" src="..\imgs\barrio_imgs\barrio_outside.jpg" alt="An image of what barrio brewing company looks like on the outside">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"Barrio Brewing Co. is a gem in Tucson. Their craft beers are top-notch, and the atmosphere is always lively. A must-visit for any beer enthusiast!"</p>
-                <p class="person">- John Smith</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="img" src="..\imgs\barrio_imgs\barrio_bar.jpg" alt="An image of what the bar looks like at barrio brewing company">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"I love Barrio Brewing Co.! Their pizzas are delicious, and they pair perfectly with their selection of beers. Great place to hang out with friends!"</p>
-                <p class="person">- Emily Johnson</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="img" src="..\imgs\barrio_imgs\barrio_dining.jpg" alt="An image of what the dining room looks like at barrio brewing company">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"The ambiance at Barrio Brewing Co. is fantastic. Whether you're indoors or out on the patio, it's always a great experience. Plus, their staff is friendly and knowledgeable about their beers!"</p>
-                <p class="person">- Michael Rodriguez</p>
-            </div>
-        </div>
     </div>
 </body>
 </html>
