--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -66,42 +66,64 @@
         </div>
 
         <div class="card">
+            <div id="googleMap"></div>
+
+            <script>
+
+            function myMap() {
+                var mapProp= {
+                center:new google.maps.LatLng(32.200055, -110.956530),
+                zoom:16,
+                };
+                var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+
+                var marker = new google.maps.Marker({
+                position:{lat:  32.200055,lng:-110.956530},
+                map:map
+                });
+            }
+            </script>
+
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAqfA4GOBrmwVUx2gDtmN2DXNkPLWWDcw&callback=myMap"></script>
+        </div>
+
+        <div class="container2">
+            <div class="card">
+                <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"Absolutely delicious tacos! The carne asada is flavorful and tender, and the salsa adds the perfect kick. I could eat here every day!"</p>
+                    <p class="person">- Maria Gonzalez</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="img" src="..\imgs\rustico_imgs\rustico_closeup_tacos.jpg" alt="">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"Tacos Rustico never disappoints. Their tacos are always fresh and bursting with flavor. I highly recommend trying the al pastor!"</p>
+                    <p class="person">- Javier Rodriguez</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="img" src="..\imgs\rustico_imgs\rustico_sign.jpg" alt="">
+            </div>
+            <div class="card">
+                <div class="review">
+                    <p>"Best tacos in town! The staff is friendly, the prices are reasonable, and the food is consistently delicious. I'm a regular customer for a reason!"</p>
+                    <p class="person">- Emily Smith</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
             <div class="video">
                 <p>Watch this video to see what Tacos Rustico is all about</p>
                 <iframe width="560" height="315" 
                     src="https://www.youtube.com/embed/Polb2IQKEO0?si=62KLkY5FWF0rTQzf&amp;start=115" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
-            </div>
-        </div>
-    </div>
-
-    <div class="container2">
-        <div class="card">
-            <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"Absolutely delicious tacos! The carne asada is flavorful and tender, and the salsa adds the perfect kick. I could eat here every day!"</p>
-                <p class="person">- Maria Gonzalez</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="img" src="..\imgs\rustico_imgs\rustico_closeup_tacos.jpg" alt="">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"Tacos Rustico never disappoints. Their tacos are always fresh and bursting with flavor. I highly recommend trying the al pastor!"</p>
-                <p class="person">- Javier Rodriguez</p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="img" src="..\imgs\rustico_imgs\rustico_sign.jpg" alt="">
-        </div>
-        <div class="card">
-            <div class="review">
-                <p>"Best tacos in town! The staff is friendly, the prices are reasonable, and the food is consistently delicious. I'm a regular customer for a reason!"</p>
-                <p class="person">- Emily Smith</p>
             </div>
         </div>
     </div>
