--- a/src/html/about.html
+++ b/src/html/about.html
@@ -15,49 +15,53 @@
     <script src="../../header/headerHTML.js"></script>
 
     <div class="about-container">
-        <div class="card" id="team">
-            <h2>The Team</h2>
-            <div class="team-member">
-                <p>Kieran Chafin dymi-dev</p>
-            </div>
-            <div class="team-member">
-                <p>Elliot Seo eloote97</p>
-            </div>
-            <div class="team-member">
-                <p>Koby Kresse kressekoby</p>
-            </div>
-            <div class="team-member">
-                <p>Ceci Nguyen cecilianguyen1</p>
-            </div>
-            <div class="team-member">
-                <p>Kyle Elison KyleElison</p>
-            </div>
-            <div class="team-member">
-                <p>Abel Toledo toledo1-j</p>
-            </div>
-            <div class="team-member">
-                <p>Jacob Castillo</p>
-            </div>
-            <div class="team-member">
-                <p>Michael Rafko mrafko</p>
-            </div>
-            <div class="team-member">
-                <p>Tobin Nickels tobinnickels</p>
+        <div class="card">
+            <div class="team">
+                <h2>The Team</h2>
+                <div class="team-member">
+                    <p>Kieran Chafin dymi-dev</p>
+                </div>
+                <div class="team-member">
+                    <p>Elliot Seo eloote97</p>
+                </div>
+                <div class="team-member">
+                    <p>Koby Kresse kressekoby</p>
+                </div>
+                <div class="team-member">
+                    <p>Ceci Nguyen cecilianguyen1</p>
+                </div>
+                <div class="team-member">
+                    <p>Kyle Elison KyleElison</p>
+                </div>
+                <div class="team-member">
+                    <p>Abel Toledo toledo1-j</p>
+                </div>
+                <div class="team-member">
+                    <p>Jacob Castillo</p>
+                </div>
+                <div class="team-member">
+                    <p>Michael Rafko mrafko</p>
+                </div>
+                <div class="team-member">
+                    <p>Tobin Nickels tobinnickels</p>
+                </div>
             </div>
         </div>
-        <div class="card" id="info">
-            <h2>Why?</h2>
-            <div class="summary">
-                <p>As many of us are locals to Tucson, we want to express our love for the hidden gems that it has to offer.
-                    Tucson is rich with food culture that many people overlook, and we would love to shine light on places that
-                    have made impacts in our lives.
-                </p>
-            </div>
-            <div class="disclaimer">
-                <p>Note: This is a University of Arizona project for class ISTA 302, Web Development.</p>
-            </div>
-            <div class="github">
-                <a href="https://github.com/eloote97/ista329-project.git">Github</a>
+        <div class="card">
+            <div class="info">
+                <h2>Why?</h2>
+                <div class="summary">
+                    <p>As many of us are locals to Tucson, we want to express our love for the hidden gems that it has to offer.
+                        Tucson is rich with food culture that many people overlook, and we would love to shine light on places that
+                        have made impacts in our lives.
+                    </p>
+                </div>
+                <div class="disclaimer">
+                    <p>Note: This is a University of Arizona project for class ISTA 302, Web Development.</p>
+                </div>
+                <div class="github">
+                    <a href="https://github.com/eloote97/ista329-project.git">Github</a>
+                </div>
             </div>
         </div>
     </div>
