--- a/src/html/barrio.html
+++ b/src/html/barrio.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../javascript/barrio_map.js" defer></script> 
     <title>Barrio Brewing Co.</title>
 </head>
 
@@ -35,31 +34,31 @@
                             <th>Hours</th>
                         </tr>
                         <tr>
-                            <td>Sun</td>
+                            <td>Sun:</td>
                             <td>11:00 AM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Mon</td>
+                            <td>Mon:</td>
                             <td>11:00 AM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Tue</td>
+                            <td>Tue:</td>
                             <td>11:00 AM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Wed</td>
+                            <td>Wed:</td>
                             <td>11:00 AM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Thu</td>
+                            <td>Thu:</td>
                             <td>11:00 AM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Fri</td>
+                            <td>Fri:</td>
                             <td>11:00 AM - 11:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Sat</td>
+                            <td>Sat:</td>
                             <td>11:00 AM - 11:00 PM</td>
                         </tr>
                     </table>
