--- a/src/html/lachingada.html
+++ b/src/html/lachingada.html
@@ -34,31 +34,31 @@
                             <th>Hours</th>
                         </tr>
                         <tr>
-                            <td>Sun</td>
+                            <td>Sun:</td>
                             <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Mon</td>
+                            <td>Mon:</td>
                             <td>9:00 AM - 3:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Tue</td>
+                            <td>Tue:</td>
                             <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Wed</td>
+                            <td>Wed:</td>
                             <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Thu</td>
+                            <td>Thu:</td>
                             <td>9:00 AM - 3:00 PM, 5:00 PM - 10:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Fri</td>
+                            <td>Fri:</td>
                             <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
                         </tr>
                         <tr>
-                            <td>Sat</td>
+                            <td>Sat:</td>
                             <td>9:00 AM - 3:00 PM, 5:00 PM - 12:00 AM</td>
                         </tr>
                     </table>
