--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -33,31 +33,31 @@
                             <th>Hours</th>
                         </tr>
                         <tr>
-                            <td>Sun</td>
+                            <td>Sun:</td>
                             <td>7:00 AM - 9:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Mon</td>
+                            <td>Mon:</td>
                             <td>Closed</td>
                         </tr>
                         <tr>
-                            <td>Tue</td>
+                            <td>Tue:</td>
                             <td>7:00 AM - 9:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Wed</td>
+                            <td>Wed:</td>
                             <td>7:00 AM - 9:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Thu</td>
+                            <td>Thu:</td>
                             <td>7:00 AM - 9:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Fri</td>
+                            <td>Fri:</td>
                             <td>7:00 AM - 9:00 PM</td>
                         </tr>
                         <tr>
-                            <td>Sat</td>
+                            <td>Sat:</td>
                             <td>7:00 AM - 9:00 PM</td>
                         </tr>
                     </table>
