Added a footer to signup to every page

--- a/index.html
+++ b/index.html
@@ -76,4 +76,28 @@
             </div>
         </button>
     </div>
+
+    <footer>
+        <div class="signup-form">
+            <h2>Subscribe to our Newsletter</h2>
+            <p id="successMessage" style="display: none;">Thank you for subscribing!</p>
+            <form id="subscriptionForm" action="#">
+                <input type="email" name="email" id="emailInput" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+    </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            /* Not actually saving the email, just simulating that it got saved */
+            $('#subscriptionForm').submit(function(event) {
+                event.preventDefault();
+                $('#successMessage').fadeIn(500).delay(2000).fadeOut(500);
+                $('#emailInput').val('');
+            });
+        });
+    </script>
+
 </body>
