--- a/src/html/about.html
+++ b/src/html/about.html
@@ -13,6 +13,8 @@
     <!-- you will have a terrible day if you remove these 2 scrips -->
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
+    <script src="../../footer/footerHTML.js"></script>
+    <script src="../../footer/footerCSS.js"></script>
 
     <div class="about-container">
         <div class="card">
