--- a/src/html/bisonwitches.html
+++ b/src/html/bisonwitches.html
@@ -11,6 +11,8 @@
 <body>
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
+    <script src="../../footer/footerHTML.js"></script>
+    <script src="../../footer/footerCSS.js"></script>
 
     <div class="container">
         <div class="card">
