--- a/src/html/about.html
+++ b/src/html/about.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <!-- you will have a terrible day if you remove these 2 scrips -->
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
     <script src="../../footer/footerHTML.js"></script>
@@ -59,10 +58,10 @@
                     </p>
                 </div>
                 <div class="disclaimer">
-                    <p>Note: This is a University of Arizona project for class ISTA 302, Web Development.</p>
+                    <p>Note: This is a University of Arizona project for class ISTA 329, Web Development.</p>
                 </div>
                 <div class="github">
-                    <a href="https://github.com/eloote97/ista329-project.git">Github</a>
+                    <a href="https://github.com/eloote97/ista329-project.git" alt="Github repository link">Github</a>
                 </div>
             </div>
         </div>
