--- a/src/html/maico.html
+++ b/src/html/maico.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="img" src="..\imgs\maico_imgs\maico_sign.jpg" alt="The sign that Maicos Mexican Resturtant has up.">
+                <img class="img" src="..\imgs\maico_imgs\maico_sign.jpg" alt="The sign of Maicos Mexican Resturtant">
             </div>
             <div class="card">
                 <div class="review">
