--- a/src/html/rustico.html
+++ b/src/html/rustico.html
@@ -6,9 +6,22 @@
     <link rel="stylesheet" type="text/css" href="../styles/restaurant_page.css" /> 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Tacos Rustico</title>
+    <style>
+        #skip-link {
+            position: absolute;
+            top: -40px;
+            left: 0;
+            background-color: #000;
+            color: #fff;
+            padding: 10px;
+            z-index: 1000;
+        }
+    </style>
 </head>
 
 <body>
+    <a href="#main-content" id="skip-link">Skip to main content</a>
+
     <script src="../../header/headerCSS.js"></script>
     <script src="../../header/headerHTML.js"></script>
     <script src="../../footer/footerHTML.js"></script>
@@ -16,7 +29,7 @@
 
     <div class="container">
         <div class="card">
-            <div class="main">
+            <div class="main" id="main-content">
                 <div class="description">
                     <h1>TACOS RUSTICO</h1>
                     <div class="link">
@@ -69,21 +82,18 @@
 
         <div class="card">
             <div id="googleMap"></div>
-
             <script>
-
-            function myMap() {
-                var mapProp= {
-                center:new google.maps.LatLng(32.200055, -110.956530),
-                zoom:16,
-                };
-                var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-                var marker = new google.maps.Marker({
-                position:{lat:  32.200055,lng:-110.956530},
-                map:map
-                });
-            }
+                function myMap() {
+                    var mapProp= {
+                        center:new google.maps.LatLng(32.200055, -110.956530),
+                        zoom:16,
+                    };
+                    var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+                    var marker = new google.maps.Marker({
+                        position:{lat:  32.200055,lng:-110.956530},
+                        map:map
+                    });
+                }
             </script>
 
             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAqfA4GOBrmwVUx2gDtmN2DXNkPLWWDcw&callback=myMap"></script>
@@ -91,26 +101,35 @@
 
         <div class="container2">
             <div class="card">
-                <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="">
+                <img class="img" src="..\imgs\rustico_imgs\rustico_chef.jpg" alt="Chef preparing tacos at Tacos Rustico">
             </div>
+
             <div class="card">
                 <div class="review">
                     <p>"Absolutely delicious tacos! The carne asada is flavorful and tender, and the salsa adds the perfect kick. I could eat here every day!"</p>
                     <p class="person">- Maria Gonzalez</p>
                 </div>
             </div>
+
             <div class="card">
-                <img class="img" src="..\imgs\rustico_imgs\rustico_closeup_tacos.jpg" alt="">
+                <div class="card">
+                    <img class="img" src="..\imgs\rustico_imgs\rustico_closeup_tacos.jpg" alt="Close-up of tacos at Tacos Rustico">
+                </div>
             </div>
+
             <div class="card">
                 <div class="review">
                     <p>"Tacos Rustico never disappoints. Their tacos are always fresh and bursting with flavor. I highly recommend trying the al pastor!"</p>
                     <p class="person">- Javier Rodriguez</p>
                 </div>
             </div>
+
             <div class="card">
-                <img class="img" src="..\imgs\rustico_imgs\rustico_sign.jpg" alt="">
+                <div class="card">
+                    <img class="img" src="..\imgs\rustico_imgs\rustico_sign.jpg" alt="Signage at Tacos Rustico">
+                </div>
             </div>
+
             <div class="card">
                 <div class="review">
                     <p>"Best tacos in town! The staff is friendly, the prices are reasonable, and the food is consistently delicious. I'm a regular customer for a reason!"</p>
